--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
             #neuromorphic  #wearables  #lowpowersystems  #tinyML  #IoT  #ubiquitouscomputing
           </p>
         </span>
-      <span style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#0096C7; text-decoration: none;">Googling me</a>.</span>
 
       </div>
 
@@ -189,8 +188,9 @@
           In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you
           can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
           enjoy reading non-fiction, and have a diverse palette when it comes to food.
-
         </p>
+        <p style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#0096C7; text-decoration: none;">Googling me</a>.</p>
+
       </div>
     </div>
 
