--- a/projects/index.html
+++ b/projects/index.html
@@ -200,6 +200,12 @@
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
           <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
         </a>
+        <div class="desc">ResponsiveSNNs for Falls</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
+          <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
+        </a>
         <div class="desc">PA2BLO</div>
       </div>
       <div class="gallery">
