--- a/projects/index.html
+++ b/projects/index.html
@@ -198,9 +198,9 @@
     <div class="projects">
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
-          <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
+          <img src="/img/ResponsiveSNNs.png" alt="Fall SNNs">
         </a>
-        <div class="desc">ResponsiveSNNs for Falls</div>
+        <div class="desc">ResponsiveSNNs: Falls</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
