--- a/projects/index.html
+++ b/projects/index.html
@@ -198,7 +198,7 @@
     <div class="projects">
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
-          <img src="/img/ResponsiveSNNs.png" alt="Fall SNNs">
+          <img src="/img/ResponsiveSNNs_1.png" alt="Fall SNNs">
         </a>
         <div class="desc">ResponsiveSNNs: Falls</div>
       </div>
