--- a/projects/index.html
+++ b/projects/index.html
@@ -197,7 +197,7 @@
 
     <div class="projects">
       <div class="gallery">
-        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
+        <a target="_blank" href="https://github.com/NeuromorphicX/ResponsiveSNNs-FallDetection">
           <img src="/img/ResponsiveSNNs_1.png" alt="Fall SNNs">
         </a>
         <div class="desc">ResponsiveSNNs: Falls</div>
