--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
         <p>
-          Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS,
+          Hi, I'm Hemanth Sabbella, a second year PhD student at SCIS,
           <a href="https://computing.smu.edu.sg/">Singapore Management University (SMU)</a>
           advised by Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at Mens, Manus, and Machina (M3S),
           under <a href="https://m3s.mit.edu/our-team/hemant-sebbal">MIT's SMART Program</a>
