--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
           under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
         </p>
         <p>
-          I specialize in deep learning for MCUs (tinyML), low-power embedded systems, digital and analog
-          circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable
+          I specialize in deep learning for MCUs (tinyML) and low-power embedded systems. My current research broadly encompasses neuromorphic sensing and computing, low-power wearable
           sensing systems, and resource-constrained models, exploring their integration into ubiquitous and
           robotic applications.
         </p>
@@ -197,6 +196,11 @@
     <div class="row marketing">
       <p style="font-size:21px; color:var(--ocean-primary);">Highlights:</p>
       <ul style="list-style:none; padding:0; margin:0;">
+       <li style="margin:0.5em 0;">
+          🎤 <strong>10-2025:</strong> Guest Talk at the 
+          <a href="https://www.lborolondon.ac.uk/research-innovation/hubs/">AI and Humanity Hub, Loughborough University</a> — 
+          “On the Temporal Characteristics of Spiking Neural Networks: Fast and Efficient Neuromorphic AI”
+        </li>
         <li style="margin:0.5em 0;">
           💼 <strong>05-2025:</strong> Started as a Visiting Student at Singapore-MIT Alliance for
           Research and Technology Center with
