--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
           <p style="margin-top:20px; font-size:14px; color:var(--ocean-primary);">
             #neuromorphic  #wearables  #lowpowersystems  #tinyML  #IoT  #ubiquitouscomputing
           </p>
+          <a href='https://mapmyvisitors.com/web/1c0cl'  title='Visit tracker'><img src='https://mapmyvisitors.com/map.png?cl=0096c7&w=a&t=tt&d=shW72uw30kk16-iNF-9p2HCZ7qJI1k9hYDoMXjyKpHU&co=ffffff&ct=808080'/></a>
         </span>
 
       </div>
