Comment out author Google search paragraph
Comment out the paragraph about Googling the author.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
           enjoy reading non-fiction, and have a diverse palette when it comes to food.
         </p>
-        <p style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#0096C7; text-decoration: none;">Googling me</a>.</p>
+        <!-- <p style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#0096C7; text-decoration: none;">Googling me</a>.</p> -->
 
       </div>
     </div>
